--- a/Num_Puz_D/Num_Puz_D.html
+++ b/Num_Puz_D/Num_Puz_D.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Num_Puzz_Random</title>
-    <link rel="stylesheet" href="Num_Puz_Random.css">
+    <title>Num_Puzz_3X3</title>
+    <link rel="stylesheet" href="Num_Puz_D.css">
 </head>
 <body>
     <table>
-        <tr>    
+        <tr>
             <td colspan="3"><center>Number Puzzle<br>Game</td></center>
         </tr>
         <tr>
@@ -35,7 +35,7 @@
     </table>
 
     
-    <script src="Num_Puz_Random.js"></script>
+    <script src="Num_Puz_D.js"></script>
 
 </body>
 </html>
